[gd_scene load_steps=2 format=3 uid="uid://bswdf8enr4cc"]

[ext_resource type="Script" uid="uid://cdup7ycoienph" path="res://shared/ui/kill_counter/kill_counter_entry.gd" id="1_b0qkd"]

[node name="KillCounterEntry" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_b0qkd")

[node name="nameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "naaaaaaame"

[node name="counterLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "0/10"
